# EVAnalysis

./: .gitignore  README.md  analysis.ipynb  config.toml  denmark_ev_data.json  fix_runs_csv.py  grid_search.py  main.py  master_variance.py  pyproject.toml  random_grid_search.py  rescoring.py  rescoring_penalties.toml  run_scoring.py  scoring_penalty.py  seeded_runs.py  transform.py  variance_investigator.py
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.ipynb_checkpoints/: analysis-checkpoint.ipynb
analysis/: raw_metrics_analyser.py
analysis/detect_outliers/: outlier_analyser.py
analysis/metrics_analyser/: arrival_metrics_analyser.py  charger_metrics_analyser.py  station_metrics_analyser.py  type_schemas.py  waittime_metrics_analyser.py
analysis/outlier_analyser/: outlier_analyser.py
analysis/scoring/: default_scores.py  ev_scorer.py  save_scores.py  scoring_config.py  simulation_scorer.py  station_scorer.py
data/: stations_locations.parquet
helpers/: constants.py  io_helpers.py  loader.py  scoring_weights.py  type_schemas.py  variance_configs.py
init/: loader.py
pipeline/: run_pipeline.py
template/analysis/: charger_analysis.py  station_analysis.py
template/models/: charger_snapshot.py  station_snapshot.py
visualisation/: dashboard.py
visualisation/dashboards/: generate_dashboards.py  scoring_dashboard.py
visualisation/dashboards/charts/: arrival_delay_diagram.py  arrival_delay_histogram.py  (+8 more)
visualisation/heatmaps/: denmark.py  heatmaps_loader.py  idw.py  inverse_distance_weighting.py  loader.py  renderer.py  smooth.py
(+5 files in other folders)
